--- a/SelectionCommittee_/src/main/resources/application.properties
+++ b/SelectionCommittee_/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 # ==============================================================
 # = Data Source
 # ==============================================================
-spring.datasource.url = jdbc:mysql://localhost:3306/login?useSSL=true
+spring.datasource.url = jdbc:mysql://localhost:3306/selection_committee?useSSL=true
 spring.datasource.username = root
 spring.datasource.password = makogon3010
 
